web-infras/parser/tests/fixtures/babel/es2015/uncategorised/275/output.txt
[SyntaxError]: Numeric Literal and string literal can not use as shorted property. (1,4)
1|({ "chance" }) = obj
 |  ^
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|({ "chance" }) = obj
 |^
